Fix: The brand logo icon was cut off.

--- a/BlazingStory/Components/BrandLogo.razor.scss
+++ b/BlazingStory/Components/BrandLogo.razor.scss
@@ -4,4 +4,5 @@
     background-repeat: inherit;
     background-position: inherit;
     background-image: var(--bs-brand-logo-icon-url);
+    display: inline-block;
 }
